# kbsb-dashboard

./: .gitattributes  Makefile  README.md
api/: .dockerignore  .env.template  Dockerfile  fly.toml  pyproject.toml
api/datadash/: manage.py
api/datadash/datadash/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
app/pages/: _app.js  index.js
app/src/: App.css  App.jsx  main.jsx
app/src/components/dashboard/: Dashboard.jsx
app/src/components/dashboard/apexcharts/: EuroDollar.jsx
app/src/components/interface/: Footer.jsx  Header.jsx  NavBar.jsx  NavMenu.jsx
app/src/styles/: globals.css  normalize.css
app/styles/: normalize.css
app/styles/pages/: Home.module.css
data/: eurodollar.json
docker/: Dockerfile.dev  README.md  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/nodejs/: Dockerfile
docker/python/: Dockerfile
